# session-visualizer

./: .gitignore  README.ja.md  README.md  pyproject.toml
docs/en/: http-api.md
docs/ja/: http-api.md
src/session_visualizer/: __init__.py  aggregator.py  cli.py  fitting.py  integration.py  jsonl_source.py  periodic.py  server.py  sink.py  tail_source.py
tests/: test_aggregator.py  test_fitting.py  test_integration_session.py  test_periodic.py  test_server_figures.py  test_server_suggest.py  test_sink.py  test_tail_source.py
